--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -105,16 +105,16 @@
           {%csrf_token%}
           <div>
             <label
-              for="email"
+              for="username"
               class="block mb-2 text-sm font-medium text-stone-900 dark:text-white"
               >Kullanıcı Adı</label
             >
             <input
               type="email"
               name="email"
-              id="email"
+              id="username"
               class="bg-stone-50 border border-stone-300 text-stone-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 inline w-full p-2.5 dark:bg-stone-700 dark:border-stone-600 dark:placeholder-stone-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              placeholder="İsminiz"
+              placeholder=""
               required=""
               value="{{username}}"
             />
@@ -122,14 +122,14 @@
           <div class="flex justify-between">
             <div>
               <label
-                for="email"
+                for="firstname"
                 class="block mb-2 text-sm font-medium text-stone-900 dark:text-white"
                 >İsim</label
               >
               <input
-                type="email"
-                name="email"
-                id="email"
+                type="text"
+                name="firstname"
+                id="firstname"
                 class="bg-stone-50 border border-stone-300 text-stone-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 inline w-full p-2.5 dark:bg-stone-700 dark:border-stone-600 dark:placeholder-stone-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                 placeholder="İsminiz"
                 required=""
@@ -138,14 +138,14 @@
             </div>
             <div>
               <label
-                for="email"
+                for="lastname"
                 class="block mb-2 text-sm font-medium text-stone-900 dark:text-white"
                 >Soyisim</label
               >
               <input
-                type="email"
-                name="email"
-                id="email"
+                type="text"
+                name="lastname"
+                id="lastname"
                 class="bg-stone-50 border border-stone-300 text-stone-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 inline w-full p-2.5 dark:bg-stone-700 dark:border-stone-600 dark:placeholder-stone-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                 placeholder="Soyisminiz"
                 required=""
